--- a/crypto.html
+++ b/crypto.html
@@ -23,7 +23,7 @@ margin-top:1em;
 <h2>Getting crypto</h2>
 
 <ul>
-<li>Best bet is <a href="https://www.coinbase.com/">Coinbase</a>, which is the most trusted (read: boomer) exchange in the US. 2% fee to purchase crypto with debit/credit card, so not the best choice for large investments, but not a huge deal if you&#39;re just getting your feet wet with a small purchase. 
+<li>Best bet is <a href="https://www.coinbase.com/">Coinbase</a>, which is the most trusted (read: boomer) OTC crypto outlet in the US. 2% fee to purchase crypto with debit/credit card, so not the best choice for large investments, but not a huge deal if you&#39;re just getting your feet wet with a small purchase. 
 
 <ul>
 <li>Coinbase requires you to go through the KYC (Know-Your-Customer) process before you can buy any coins, but it&#39;s pretty straightforward: name, address, SSN, photo ID. When I signed up I was verified the same day, but your mileage may vary.</li>
