--- a/crypto.html
+++ b/crypto.html
@@ -40,13 +40,13 @@ margin-top:1em;
 <strong>Rating:</strong> Pass.</li>
 <li><a href="https://www.binance.us/en/home">Binance US</a> is one of the bigger and more popular exchanges in the States. Decent selection of pairs, but limited only to spot trading &amp; doesn&#39;t offer leverage. Their reputation is a little spotty, though, and apparently their customer service sucks. 
 <br/>
-<strong>Rating:</strong> Eh. Doesn&#39;t really bring enough to the table to compensate for their occasional sketchiness.</li>
+<strong>Rating:</strong> Eh. Doesn&#39;t really bring enough to the table to compensate for their questionable trustworthiness.</li>
 <li><a href="https://www.kraken.com/">Kraken</a> is also a big US exchange; their reputation is solid and they&#39;re one of the only places that explicitly allows US citizens to trade on margin for some pairs. They also have futures trading. Lacks some of the more fun shitcoin pairs, though, which puts a damper on the true &ldquo;crypto degenerate&rdquo; experience. 
 <br/>
 <strong>Rating:</strong> Good pick for larger portfolios.</li>
-<li><a href="https://www.kucoin.com/">Kucoin</a> &lt;- This place is my jam. Up to 10x margin trading, huge selection of pairs (including hard-to-find shitcoins), lending, staking, futures, the whole nine yards. For sure kind of sketchy, so not a place to put or keep large sums of money, but certainly a fun place to goof off and get the hang of trading crypto. 
+<li><a href="https://www.kucoin.com/">Kucoin</a> &lt;- This place is my jam. Up to 10x margin trading, huge selection of pairs (including hard-to-find shitcoins), lending, staking, futures, the whole nine yards. Fees are average. Probably not a place to put or keep large sums of money, but certainly a fun place to goof off and get the hang of trading crypto. 
 <br/>
-<strong>Rating:</strong> A bit shady, but super fun. My personal favorite.
+<strong>Rating:</strong> Super fun. Comes off as a little unscrupulous, even though I haven't had any issues yet. My personal favorite, so far, especially for experimenting with trading set-ups with small amounts.
 <br/>
 <br/>
 <em>IMPORTANT NOTE ABOUT KUCOIN:</em> Don&#39;t attempt to do the KYC on Kucoin. They pretend not to serve US citizens, so if you tell them you&#39;re in the US, they&#39;ll freeze your ability to trade and force you to withdraw all your coins. Good news is, the only real limitation on people who haven&#39;t done the KYC is that you can <em>only</em> withdraw 2 BTC per day (not kidding).</li>
