--- a/crypto.html
+++ b/crypto.html
@@ -33,7 +33,6 @@ margin-top:1em;
 <h2>Getting on an exchange</h2>
 
 <h3>Choosing an exchange</h3>
-
 <ul>
 <li>Coinbase has its own exchange, <a href="https://pro.coinbase.com/trade/BTC-USD">Coinbase Pro</a>, but it doesn&#39;t have a huge amount of pairs, and the pairs they <em>do</em> have aren&#39;t all that interesting. 
 <br/>
@@ -51,7 +50,10 @@ margin-top:1em;
 <br/>
 <em>IMPORTANT NOTE ABOUT KUCOIN:</em> Don&#39;t attempt to do the KYC on Kucoin. They pretend not to serve US citizens, so if you tell them you&#39;re in the US, they&#39;ll freeze your ability to trade and force you to withdraw all your coins. Good news is, the only real limitation on people who haven&#39;t done the KYC is that you can <em>only</em> withdraw 2 BTC per day (not kidding).</li>
 </ul>
-
+  <h4>Can't I just get coins on Robinhood/Webull/etc.?</h4>
+  <p>You can <em>speculate</em> on coins with Robinhood/Webull/etc., but it's not recommended to do so because "buying" coins on those brokers <em>doesn't actually entail you getting the coin.</em>
+  Meaning, if you wanted to cash out and move those coins elsewhere, you'd be SOL, because you don't actually own the coins. Better to use one of the above-listed exchanges where you can move your assets
+  around freely, or even cash them out to a wallet on your PC or a hardware wallet, if you'd like.</p>
 <h3>Moving money to an exchange</h3>
 
 <p>The way I get funds into an exchange is as follows: </p>
@@ -66,4 +68,13 @@ margin-top:1em;
 <li>Wait for the funds to clear on the blockchain. Can take some time, so don&#39;t get too nervous if it doesn&#39;t show up immediately on the exchange. When I deposit XTZ to an exchange, it typically takes around half an hour to get all the confirmations necessary to release the funds for trading.</li>
 <li>That&#39;s it! Knock yourself out.</li>
 </ol>
+  <h4>Wait, how do I get my US dollars back after I'm done?</h4>
+  <p>There's a couple of ways to cash out: </p>
+  <ol>
+    <li>Reverse the above, i.e. send your coins from the exchange back to Coinbase, convert to USD, & withdraw.</li>
+    <li>Sell your coins for USD on the exchange itself & withdraw.</li>
+    <ul><li><b>Note:</b> you can generally only withdraw fiat from exchanges where you've done the KYC, however, it's dead easy to work around that limitation. For example: 
+      say you're on Kucoin where you haven't done the KYC, and you want to cash out, all you'd have to 
+      transfer your coins to either Coinbase or another exchange (one that knows you) and <em>then</em> convert to USD in order to get back your fiat.</li></ul>
+  </ol>
 </body></html>
