--- a/crypto.html
+++ b/crypto.html
@@ -51,9 +51,10 @@ margin-top:1em;
 <em>IMPORTANT NOTE ABOUT KUCOIN:</em> Don&#39;t attempt to do the KYC on Kucoin. They pretend not to serve US citizens, so if you tell them you&#39;re in the US, they&#39;ll freeze your ability to trade and force you to withdraw all your coins. Good news is, the only real limitation on people who haven&#39;t done the KYC is that you can <em>only</em> withdraw 2 BTC per day (not kidding).</li>
 </ul>
   <h4>Can't I just get coins on Robinhood/Webull/etc.?</h4>
-  <p>You can <em>speculate</em> on coins with Robinhood/Webull/etc., but it's not recommended to do so because "buying" coins on those brokers <em>doesn't actually entail you getting the coin.</em>
-  Meaning, if you wanted to cash out and move those coins elsewhere, you'd be SOL, because you don't actually own the coins. Better to use one of the above-listed exchanges where you can move your assets
-  around freely, or even cash them out to a wallet on your PC or a hardware wallet, if you'd like.</p>
+  <p>You can <em>speculate</em> on coins with Robinhood/Webull/etc., but I don't recommend it. Here's why: Putting money on coins using those brokers <u>doesn't actually entail you owning the underlying asset.</u>
+  Meaning you'd be SOL if you wanted to move those coins elsewhere. Better to use one of the above-listed exchanges where you can move your assets
+  around freely, or even cash them out to a wallet on your PC or a hardware wallet, if you'd like. Half of the fun of crypto is that it's highly liquid, and moving money between exchanges is a breeze. Robinhood and Webull's crypto department is set up to keep you within
+  their walled garden, and that's beat.</p>
 <h3>Moving money to an exchange</h3>
 
 <p>The way I get funds into an exchange is as follows: </p>
